[package]
name = "rust_midi"
version = "0.0.1"
edition = "2021"
author = "Marcin Kustra <marcinkustra1994@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
async-channel = "~1.8"
async-process = "~1.6"
async-trait = "~0.1"
clap = { version = "~4.0", features = ["derive"] }
crossbeam-channel = "~0.5"
k8s-openapi = { version = "~0.17", features = ["v1_24"] }
kube = { version = "~0.78", features = ["runtime"] }
kube-client = { version = "~0.78" }
midir = "~0.8"
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
thiserror = "~1.0"
tokio = { version = "~1.25", features = ["full"] }
